# learnin-nvrhi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
assets/: MossPatch.glb  TestEnvironment.glb  Trongle.glb  pentagon.glb  splotch.glb
assets/shaders/: compile_shaders.ps1  default.frag  default.hlsl  default.vert  screen.hlsl  shaders.cfg
src/: Common.hpp  DeviceManager.cpp  DeviceManager.hpp  DeviceManagerDX11.cpp  DeviceManagerDX12.cpp  DeviceManagerVK.cpp  Main.cpp  Model.cpp  Shader.cpp  System.cpp  Texture.cpp
